VOTE-2170 fix alignment of gov banner text on mobile (#796)

--- a/web/themes/custom/votegov/src/sass/uswds-overrides/usa-banner.scss
+++ b/web/themes/custom/votegov/src/sass/uswds-overrides/usa-banner.scss
@@ -17,6 +17,7 @@
 
 .usa-banner__inner {
   height: 3.5rem;
+  align-items: center;
 
   @include at-media-max('tablet') {
     @include u-padding-right(2);
